@@ -1,4 +1,4 @@
 AUX fvwm-crystal-build.patch 488 SHA256 f1f7d8d7ab0fc1ebee565bada22278cf28441dcd95f14156c1f97ed90c323908 SHA512 2728f99221f0ef4dd9c95af92fbf8da25413bfbf603947254863d893ebd128a9633ff1fd07ed1dcd13261020f9d2652b65ced7c439bd028d3399769d41bc1bc8 WHIRLPOOL 2112187d8e430a81d98d9e7766d8c2b7dab38db8e4086c364c7cf124a477d1497a4309f66e1dbba63ab83c7c5a5fd2ed5f33cd7dd7e928b6cf0a95ec36cfe897
-EBUILD fvwm-crystal-9999.ebuild 1981 SHA256 e3f41186d7a2a521571c2025fdeafe46daea36d5c76de267fb85ec5e58b4f68c SHA512 784c898a2c2be7366438591faa3041c0fc5280d2b043e62ab80f11c571f3b06a95cc85f214274a95ec6f2ff602c22536a163a82189fb1b82ba973d92603e13f1 WHIRLPOOL 090ea1d83043fc55880db264435cd9e0cf6ea277517ae02e2024815b0cc7637078fda11e3499d5c67298b0164fb2a3d2305643a51e1498478caaf9d8e49fcc0e
-MISC ChangeLog 3159 SHA256 497e1fe489b2acd98231ffbc36ea0e69dff79a640ae7c3656b51fce07e3ecc91 SHA512 06a9346507333b8f038c6bf50b09f9607e2a3f8794bca5fcbe9f77ba5c7d47b0fdf3ec06298f6aed345837e62d16ef7559113a7741343151bf224841d9a9abb6 WHIRLPOOL e7a8acfa1914996fa1cec9673f0dc29f15abf1432a50dd646389cb70baf83269c6a2c748ed24743f216e9eb67423dc79c07eb14ce59b7324d03d0bc73a0fc31d
+EBUILD fvwm-crystal-9999.ebuild 1978 SHA256 b282078c28f074327ec67bdcad70c4b7ae9ead596c9a7be2719d5a48ddfdddf5 SHA512 c433c85483f42c8be2d1583669123bacd885a44b4872fc442eaa4101079a2903a3468bcf2cf7938a507f758e3e05de4b5931a4fcad3e1abfe4a19069944f0453 WHIRLPOOL 68f51a6a9b30c67e678ed2aec2d6fb5c60eb8f0832861f2b5056525deebdf8858dfd42d63c571bb8b320d5277dbfa7f2596cf02d3fb83d4e41bacd7def597d9a
+MISC ChangeLog 3366 SHA256 2008c735da5c48f9687ebabbf8f2f58089fec09e00b6020e0fbb741af241fd41 SHA512 edfd097e23c7e4d5d9e32b23e150c3f94a9f616f9d62df5a6df3b0cec26d0ddd21db00bcda6bf9f7582a1a7ad90e4fc907428515cdeff622a8a5519bfb67f569 WHIRLPOOL 3faead58fc184e97de00437c6560377f868dcd2b134ff7c1e1e56e95993548bb009d29d5715360671f218f1e3490436fe663b4a4effe4e83652bcbb14c4a2837
 MISC metadata.xml 246 SHA256 f32f31abe9dcc1f9a5dc9b6a36996d773abd006d92c13c4df48f8d7d1061060f SHA512 327022589c637a14219eb603a62050fbb93b980f4693960c0ac4117b6b483d9f0d9fe1366d8e18227b34373a399aef339f49c16df8ca57b9ec870568a4d394f4 WHIRLPOOL e55381a9a9fd1d0efbe87da1c3aa302efdcf4734827f56273faeb55b17361c529518fcf16ac0946102e26165e8eedba81ab0cd07c7b08ce6bad001e944e43a0f
